complete chapter 9 handsonml

--- a/Hands_On_ML/02_end_to_end_ml.ipynb
+++ b/Hands_On_ML/02_end_to_end_ml.ipynb
@@ -7346,7 +7346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -7390,7 +7390,8 @@
     "\n",
     "grid_search_prep = GridSearchCV(prepare_select_and_predict_pipeline, param_grid, cv=5,\n",
     "                                scoring='neg_mean_squared_error', verbose=2, n_jobs=4)\n",
-    "grid_search_prep.fit(housing, housing_labels)"
+    "grid_search_prep.fit(housing, housing_labels)\n",
+    "grid_search_prep.best_params_"
    ]
   }
  ],
